--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <link rel="stylesheet" href="styles.css">
     <body>
         <h1>Hey Lets practice git</h1>
+        <h2>I am learning Git !</h2>
     </body>
 </html>
